@@ -1,4 +1,4 @@
-%token TNUMBER ADDR IPADDR IP6ADDR CIDR FROM RCPT EMAIL PEER AUTOWHITE GREYLIST NOAUTH NOACCESSDB EXTENDEDREGEX NOSPF QUIET TESTMODE VERBOSE PIDFILE GLDUMPFILE QSTRING TDELAY SUBNETMATCH SUBNETMATCH6 SOCKET USER NODETACH REGEX REPORT NONE DELAYS NODELAYS ALL LAZYAW GLDUMPFREQ GLTIMEOUT DOMAIN DOMAINNAME SYNCADDR SYNCSRCADDR PORT ACL WHITELIST DEFAULT STAR DELAYEDREJECT DB NODRAC DRAC DUMP_NO_TIME_TRANSLATION LOGEXPIRED GLXDELAY DNSRBL LIST OPENLIST CLOSELIST BLACKLIST FLUSHADDR
+%token TNUMBER ADDR IPADDR IP6ADDR CIDR FROM RCPT EMAIL PEER AUTOWHITE GREYLIST NOAUTH NOACCESSDB EXTENDEDREGEX NOSPF QUIET TESTMODE VERBOSE PIDFILE GLDUMPFILE QSTRING TDELAY SUBNETMATCH SUBNETMATCH6 SOCKET USER NODETACH REGEX REPORT NONE DELAYS NODELAYS ALL LAZYAW GLDUMPFREQ GLTIMEOUT DOMAIN DOMAINNAME SYNCADDR SYNCSRCADDR PORT ACL WHITELIST DEFAULT STAR DELAYEDREJECT DB NODRAC DRAC DUMP_NO_TIME_TRANSLATION LOGEXPIRED GLXDELAY DNSRBL LIST OPENLIST CLOSELIST BLACKLIST FLUSHADDR CODE ECODE MSG
 
 %{
 #include "config.h"
@@ -6,7 +6,7 @@
 #ifdef HAVE_SYS_CDEFS_H
 #include <sys/cdefs.h>
 #ifdef __RCSID  
-__RCSID("$Id: conf_yacc.y,v 1.54 2006/08/01 14:55:20 manu Exp $");
+__RCSID("$Id: conf_yacc.y,v 1.55 2006/08/01 21:29:36 manu Exp $");
 #endif
 #endif
 
@@ -458,6 +458,9 @@ acl_values:	acl_value
 
 acl_value:	greylist_value
 	|	autowhite_value
+	|	code_value
+	|	ecode_value
+	|	msg_value
 	|	flush_value
 	;
 
@@ -468,6 +471,24 @@ autowhite_value:	AUTOWHITE TDELAY
 			    { acl_add_autowhite((time_t)humanized_atoi($2)); }
 	;
 flush_value:		FLUSHADDR { acl_add_flushaddr(); }
+	;
+code_value:		CODE QSTRING {
+				char code[QSTRLEN + 1];
+
+				acl_add_code(quotepath(code, $2, QSTRLEN));
+			}
+	;
+ecode_value:		ECODE QSTRING {
+				char ecode[QSTRLEN + 1];
+
+				acl_add_ecode(quotepath(ecode, $2, QSTRLEN));
+			}
+	;
+msg_value:		MSG QSTRING {
+				char msg[QSTRLEN + 1];
+
+				acl_add_msg(quotepath(msg, $2, QSTRLEN));
+			}
 	;
 fromaddr_clause:	FROM EMAIL { acl_add_from ($2); }
 	;
